Improved site layout by fixing a problem related to the fixed position of the top bar

--- a/web/topnav.css
+++ b/web/topnav.css
@@ -1,9 +1,8 @@
 .topnav {
 	top:0;
-	z-index: 1;
 	left:0;
 	width: 100vw;
-	position: fixed;
+	position: sticky;
 	background-color: #333;
 	overflow: hidden;
 }
