--- a/web/topnav.css
+++ b/web/topnav.css
@@ -3,11 +3,15 @@
 	left:0;
 	width: 100vw;
 	position: sticky;
+	padding: 0;
+	margin: 0;
 	background-color: #333;
 	overflow: hidden;
 }
 
-
+.classifiedContent {
+    display: none;
+}
 /* Style the links inside the navigation bar */
 .topnav a,.topnav .topnav-right a{
 	float: left;
