--- a/web/topnav.css
+++ b/web/topnav.css
@@ -5,7 +5,7 @@
 	position: sticky;
 	padding: 0;
 	margin: 0;
-	background-color: #F8F6F5;
+	background-color: #C8C6C5;
 	color: black;
 	overflow: hidden;
 	border-bottom: 1px solid black;
