--- a/web/GetBooks.css
+++ b/web/GetBooks.css
@@ -82,7 +82,7 @@ padding-right: 0;
 	top: 0;
 	left: 0;
 	height: 100vh;
-	width: 100%;
+	width: 100vh;
 	grid-template-columns: 60% 40%;
 	grid-column-gap: 1%;
 	background-color: grey;
@@ -131,7 +131,6 @@ padding-right: 0;
 
 .linkliststyler {
     grid-column: 2 /span 1;
-    max-width: 80%;
     grid-row: 2 / span 1;
     margin: 0;
     margin-left: 0.5rem;
