--- a/web/GetBooks.css
+++ b/web/GetBooks.css
@@ -82,7 +82,7 @@ padding-right: 0;
 	top: 0;
 	left: 0;
 	height: 100vh;
-	width: 100vh;
+	width: 100%;
 	grid-template-columns: 60% 40%;
 	grid-column-gap: 1%;
 	background-color: grey;
@@ -90,7 +90,10 @@ padding-right: 0;
 }
 
 .optioncont {
-    display: block;
+    top:0;
+    left: 60vw;
+    width: calc(40vw - 17px);
+    position: fixed;
     margin: 0;
     padding: 0.5rem;
     background-color: white;
@@ -101,7 +104,6 @@ padding-right: 0;
 	display:block;
 	width: 100%;
 	margin: 0;
-	margin-top: 1rem;
 	padding-right: 0;
 	background-color: grey;
 	overflow: scroll;
