--- a/web/Search.css
+++ b/web/Search.css
@@ -1,3 +1,10 @@
+body {
+    margin:0;
+}
+html {
+    margin:0;
+}
+
 mark {
 	font-weight: bold;
 	background: white;
@@ -361,10 +368,3 @@ https://github.com/ShadowItaly/clas-digital/issues/56.close:focus {
     cursor: pointer;
 }
 
-.upSaule {
-	margin-left: 1rem;
-}
-
-#ordered_pillars li {
-	margin-top: 1rem;
-}
