--- a/web/topnav.css
+++ b/web/topnav.css
@@ -14,8 +14,10 @@
 .classifiedContent {
     display: none;
 }
+
+
 /* Style the links inside the navigation bar */
-.topnav a,.topnav .topnav-right a{
+.topnav a,.topnav .topnav-right-in .topnav-right-in a{
 	float: left;
 	color: black;
 	text-align: center;
@@ -38,17 +40,21 @@
 }
 
 /* Right-aligned section inside the top navigation */
-.topnav-right {
+.topnav-right-in {
 	float: right;
+    display: none;
 }
-
-.topnav-right button{
+.topnav-right-out {
+	float: right;
+    display: none;
+}
+.topnav-right-in button{
 	box-sizing: border-box;
 	padding: 0.4em 0.8em;
 	margin: 0.5em 0.8em;
 }
 
-.topnav-right span {
+.topnav-right-in span {
 	box-sizing: border-box;
 	color: black;
 	font-size: 1.2em;
@@ -56,7 +62,7 @@
 	height: 100%;
 }
 
-.topnav-right form {
+.topnav-right-out form {
 	box-sizing: border-box;
 	vertical-align: center;
 	padding: 0.4em 0.8em;
