--- a/web/Search.css
+++ b/web/Search.css
@@ -8,7 +8,9 @@ html {
 mark {
 	font-weight: bold;
 	background: white;
-} .resultbox {
+
+} 
+.resultbox {
 	margin-left: 11%;
 	margin-right: 11%;
 }
@@ -31,16 +33,19 @@ mark {
 }
 
 
-.some_grid_class {
-	display: grid;
-	margin-top: 3rem;
-	grid-column-gap: 0;
-	grid-template-columns: 90% 10%;
-
+.searchResults {
+	margin-top: 1rem;
+    width:80%;
+    text-align:left;
 }
-
+.searchResult {
+	margin-bottom:2rem;
+}
 .metadata{
     width: 85%;
+    color:green;
+    font-size:small;
+    cursor:pointer;
 }
 
 /*Keeping the search box in the middle in the top of the screen*/
