--- a/web/GetBooks.css
+++ b/web/GetBooks.css
@@ -15,7 +15,6 @@ body {
 }
 
 .topnav {
-    resize: vertical;
     left: 0;
     position: fixed;
     height: 1.5rem;
@@ -24,8 +23,16 @@ body {
     overflow: auto;
     z-index: 2;
     background: white;
-    border-bottom: 2px solid black;
     overflow-y: scroll;
+}
+
+.resizer {
+    position: fixed;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background: black;
+    cursor: s-resize;
 }
 
 .topnav button {
