--- a/web/GetBooks.css
+++ b/web/GetBooks.css
@@ -9,7 +9,7 @@ body {
     width: 100%;
     left: 0;
     top: 0;
-    height: 3.5rem;
+    height: 4rem;
     min-height: 2rem;
     z-index: 3;
     background: white;
@@ -18,7 +18,9 @@ body {
 .searchstyler {
     border-radius: 50%;
     background: white;
+    padding: 0.1rem;
     margin-left: -1.6rem;
+    cursor: pointer;
 }
 
 .searchstyler:hover {
@@ -30,7 +32,7 @@ body {
     position: fixed;
     height: 2rem;
     min-height: 2rem;
-    top: 3.5rem;
+    top: 4rem;
     width: 100%;
     overflow: auto;
     z-index: 2;
@@ -42,9 +44,9 @@ body {
     position: fixed;
     z-index: 2;
     left: 0;
-    top: 5rem;
+    top: 6rem;
     width: 100%;
-    height: 10px;
+    height: 5px;
     background-color: #00618F;
     cursor: s-resize;
 }
@@ -55,7 +57,7 @@ body {
 }
 
 .topnav button:hover {
-    border-bottom: 2px solid blue;
+    background: linear-gradient(to top, rgba(0,0,255,0.3),rgba(0,0,255,0));
 }
 
 .linknav {
@@ -71,6 +73,7 @@ body {
     position: sticky;
     top: 0.2rem;
     margin-left: 1rem;
+    padding: 0.1rem;
     cursor: pointer;
 }
 
@@ -82,6 +85,7 @@ body {
     position: sticky;
     top: 0.2rem;
     margin: auto;
+    padding: 0.1rem;
     cursor: pointer;
 }
 
@@ -90,6 +94,11 @@ body {
     font-size: small;
     line-height: 2rem;
     overflow-wrap: break-word;
+}
+
+#fullsearchhitlist a {
+    color: blue;
+    text-decoration: none;
 }
 
 .hitlinkstyle {
@@ -106,7 +115,7 @@ body {
 
 .bibliostyle {
     display: block;
-    padding-top: 0.5rem;
+    padding-top: 0.2rem;
     font-size: small;
     color: green;
     -webkit-touch-callout: all; /* iOS Safari */
