Small style changes. To pick up more on what google is doing when showiung search results

--- a/web/Search.css
+++ b/web/Search.css
@@ -54,6 +54,12 @@ mark {
     font-size:1.4rem;
 }
 
+.preview {
+    font-size:13px;
+    color:#50555a;
+
+}
+
 .metadata{
     color:green;
     font-size:small;
