--- a/web/Search.css
+++ b/web/Search.css
@@ -236,10 +236,10 @@ select::-ms-expand {
 }
 
 .sugg {
-    display:none;
+    display:block;
     position:absolute;
     left:38%;
-    top:2.4rem;
+    top:2.2rem;
     background-color: #f1f1f1;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
