--- a/web/GetBooks.css
+++ b/web/GetBooks.css
@@ -143,6 +143,10 @@ body {
     margin-top: 4rem;
 }
 
+.pagecontainerFullImg div {
+    display: none;
+}
+
 .ocrcontainer {
     position: relative;
     background: white;
@@ -150,6 +154,9 @@ body {
     grid-row: 1 /span 1;
     border: 1px solid black;
     padding: 2.5rem;
+}
+
+.standardfindimagepage {
 }
 
 .ocrpage {
