Fixes #147, Just turned the violet back to yellow, overwriting the standard of the browser because we got some reports of no highlighting being shown otherwise

--- a/web/GetBooks.css
+++ b/web/GetBooks.css
@@ -230,7 +230,7 @@ div .fuzzysugslink {
 
 mark {
     color: black;
-    background: violet;
+    background: yellow;
 }
 
 div .fuzzysugslink:hover {
