--- a/web/topnav.css
+++ b/web/topnav.css
@@ -1,6 +1,12 @@
+html {
+    margin:0;
+}
+
 body {
     margin:0;
     font-family: arial,sans-serif;
+    width: 100%;
+    height: 100%;
 }
 
 .topnav {
