--- a/web/catalogue/catalogue.css
+++ b/web/catalogue/catalogue.css
@@ -6,7 +6,7 @@ ul {
  
 li {
   font: 200 20px/1.5 Helvetica, Verdana, sans-serif;
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid black;
 }
  
 li:last-child {
@@ -16,10 +16,13 @@ li:last-child {
 li a {
   text-decoration: none;
   color: #000;
-  background-color: lightblue;
   padding-left: 5%;
+  padding-top: 5px;
   display: block;
   width: 100%;
+  height: 8%;
+  text-overflow: ellipsis;
+
  
   -webkit-transition: font-size 0.3s ease, background-color 0.3s ease;
   -moz-transition: font-size 0.3s ease, background-color 0.3s ease;
@@ -29,6 +32,6 @@ li a {
 }
  
 li a:hover {
-  font-size: 30px;
-  background: blue;
+  font-size: 1.3rem;
+  background: lightgrey;
 }
