--- a/web/catalogue/catalogue.css
+++ b/web/catalogue/catalogue.css
@@ -6,8 +6,8 @@ ul {
  
 li {
   font: 200 20px/1.5 Helvetica, Verdana, sans-serif;
-  border-bottom: 1px solid black;
-  width: 80%;
+  border-bottom: 1px solid grey;
+  width: 100%;
   margin: auto;
   min-height: 5%;
 }
@@ -16,8 +16,11 @@ li a {
   text-decoration: none;
   color: #000;
   padding-top: 5px;
+  width: 80%;
+  margin: auto;
+
   display: block;
-  text-overflow: ellipsis;
+  overflow: hidden;
 
  
   -webkit-transition: font-size 0.3s ease, background-color 0.3s ease;
