Changed color of links in catalogue to blue, so user becomes a direct hint the link is acctually a link

--- a/web/catalogue/catalogue.css
+++ b/web/catalogue/catalogue.css
@@ -18,7 +18,8 @@ li {
  
 li a {
   text-decoration: none;
-  color: #000;
+
+  color: #007bff;
 
   display: block;
   overflow: hidden;
@@ -29,6 +30,10 @@ li a {
 	text-color: grey;
 }
 
+
+.searchable_item a:hover {
+    text-decoration: underline;
+}
 
 header {
 	text-align: center;
