--- a/web/topnav.css
+++ b/web/topnav.css
@@ -13,7 +13,7 @@ body {
 	top:0;
 	left:0;
 	width: 100%;
-	position: sticky;
+	position: fixed;
 	display: flex;
 	padding: 0;
 	margin: 0;
@@ -21,7 +21,7 @@ body {
 	color: black;
 	overflow: visible;
 	border-bottom: 1px solid black;
-	z-index: 2;
+	z-index: 4;
 }
 
 .classifiedContent {
