Working on #193 simplified the progress a lot more

--- a/web/catalogue/catalogue.css
+++ b/web/catalogue/catalogue.css
@@ -64,6 +64,10 @@ header {
     left:0;
 }
 
+.searchprogress {
+    display: none;
+}
+
 li a span.bookhasocr {
     color: #a25900;
     text-decoration: none;
