--- a/web/topnav.css
+++ b/web/topnav.css
@@ -107,3 +107,14 @@ body {
     padding: 1em 0em;
     border-top: 1px solid black;
 }
+
+.loginform {
+    display: flex;
+    height: 100%;
+    text-align: center;
+    vertical-align: middle;
+}
+
+form.loginform input {
+    margin: 0.5rem 0.2rem;
+}
