--- a/web/topnav.css
+++ b/web/topnav.css
@@ -6,14 +6,14 @@ body {
     margin:0;
     font-family: arial,sans-serif;
     width: 100%;
-    height: 100%;
 }
 
 .topnav {
 	top:0;
 	left:0;
 	width: 100%;
-	position: fixed;
+	position: -webkit-sticky; /* Safari */
+	position: sticky;
 	display: flex;
 	padding: 0;
 	margin: 0;
