--- a/web/static/pages.css
+++ b/web/static/pages.css
@@ -1,6 +1,5 @@
 body {
     background: grey;
-    padding: 0.5rem;
     font-family: arial,sans-serif;
     overflow-x: hidden;
 }
@@ -20,15 +19,44 @@ body {
     background-color: #444;
 }
 
+
 .searchbox {
     position: fixed;
-    width: 100%;
-    left: 0;
-    top: 0;
+    width: 2rem;
+    height: 2rem;
+    left: calc(50vw - 1rem);
+    top: 3.5rem;
+    overflow: hidden;
     z-index: 3;
-    background: white;
-    border-bottom: 2px solid black;
-    margin-top: 3em;
+    padding-left: 0.5rem;
+    transition: width 0.5s linear 1s, height 0.5s linear 0.5s, left 0.5s linear 1s, border-radius 0.1s linear 1.5s;
+    background-image: url('/static/GetBooks/compass.svg');
+    background-repeat: no-repeat;
+    background-size: 2rem 2rem;
+    background-color: #EEEEEE;
+    border-radius: 50%;
+}
+
+.searchbox:hover {
+    width: 80%;
+    left: 10%;
+    transition-delay: 0s;
+    transition-duration: 0s;
+    background-image: none;
+    background-color: #EEEEEE;
+    border-radius: 0;
+    overflow: visible;
+    height: 6.5rem;
+}
+
+.searchbox:hover div {
+    overflow: visible;
+}
+
+.toprow {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .searchstyler {
@@ -39,29 +67,22 @@ body {
     cursor: pointer;
 }
 
+#srchbox {
+    align-self: center;
+}
+
 .searchstyler:hover {
     background-color: #ddd;
 }
 
-.resizer {
-    display: none;
-    position: fixed;
-    z-index: 2;
-    left: 0;
-    top: 6rem;
-    width: 100%;
-    height: 5px;
-    background-color: #00618F;
-    cursor: s-resize;
-}
 
 .linknav {
     display: grid;
     grid-template-columns: 3rem calc(100% - 6rem) 3rem;
-    height: 2rem;
+    height: 2.5rem;
     overflow: auto;
-    resize: vertical;
     text-align: center;
+    margin-bottom: 0.2rem;
 }
 
 .lastbutcont {
@@ -106,12 +127,14 @@ body {
     grid-column: 2 /span 1;
     font-size: small;
     line-height: 2rem;
-    overflow-wrap: break-word;
+    white-space: nowrap;
+    overflow-x: auto;
     text-align: center;
 }
 
 #fullsearchhitlist a {
     color: blue;
+    margin-right: 0.5rem;
     text-decoration: none;
 }
 
@@ -171,6 +194,7 @@ body {
     grid-row: 1 /span 1;
     border: 1px solid black;
     padding: 0.5rem;
+    margin-right: 0.5rem;
 }
 
 .ocrpage {
@@ -199,6 +223,7 @@ body {
     grid-column: 1 /span 1;
     top: 7rem;
     position: sticky;
+    margin-left: 0.5rem;
 }
 
 div .fuzzysugslink {
@@ -232,4 +257,14 @@ div .fuzzysugslink:hover {
     background-color: #ddd;
 }
 
-nav a.about { float: left; }
+nav a.about 
+{ 
+    float: left; 
+    visibility: hidden;
+}
+
+nav:hover a.about
+{
+    float: left;
+    visibility: visible;
+}
