--- a/web/static/pages.css
+++ b/web/static/pages.css
@@ -258,6 +258,7 @@ nav a.about
     float: left; 
     visibility: hidden;
     margin-left: 0.5rem;
+    width: 10rem;
 }
 
 nav:hover a.about, nav.searchbox.pinnedsearchbox a.about
@@ -268,6 +269,11 @@ nav:hover a.about, nav.searchbox.pinnedsearchbox a.about
 
 nav img:hover {
     background-color: grey;
+}
+
+.tooglebut {
+    margin: 0.5rem;
+    width: 4.5rem;
 }
 
 
